--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   </head>
   <body>
     <div class="container text-center">
+      <h1>Image Slider</h1>
       <div class="carousel" id="carousel">
         <div class="handle left-handle" id="leftHandle"><</div>
         <div class="handle right-handle" id="rightHandle">></div>
-        <script src="./scripts/script.js"></script>
       </div>
     </div>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
